compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@generic_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            impl Foo {\n                fn bar<T>() -> Int32 { }\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            2656278562799560035,
        ): Impl(
            Implementation {
                id: ItemId(
                    2656278562799560035,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        11998015298247387671,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Foo",
                                location: <internal>:18:21,
                            },
                        ),
                        location: <internal>:18:21,
                    },
                    type_params: [],
                    location: <internal>:18:21,
                },
                methods: [
                    MethodDefinition {
                        id: ItemId(
                            18255359402714770757,
                        ),
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:43:46,
                        },
                        parameters: [],
                        type_parameters: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T",
                                    location: <internal>:47:48,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:47:48,
                            },
                        ],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    9261998375256972311,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:55:60,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:61:64,
                            },
                        ),
                        location: <internal>:40:64,
                    },
                ],
                type_parameters: [],
                location: <internal>:13:78,
            },
        ),
    },
    statements: {},
    expressions: {},
}
