compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            impl Foo {\n                fn bar() -> Int32 {\n                    return 0;\n                }\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13138428697284688615,
        ): Impl(
            Implementation {
                id: ItemId(
                    13138428697284688615,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        7990845552190622859,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Identifier {
                            name: "Foo",
                            location: <internal>:18:21,
                        },
                        location: <internal>:18:21,
                    },
                    type_params: [],
                    location: <internal>:18:21,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:43:46,
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    11582867247635641484,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Identifier {
                                        name: "Int32",
                                        location: <internal>:0:0,
                                    },
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:52:57,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [
                                    Statement {
                                        id: StatementId {
                                            def: ItemId(
                                                7990845552190622859,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        kind: Return(
                                            Return {
                                                id: StatementId {
                                                    def: ItemId(
                                                        7990845552190622859,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                value: Some(
                                                    Expression {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                7990845552190622859,
                                                            ),
                                                            index: Idx(
                                                                1,
                                                            ),
                                                        },
                                                        location: <internal>:87:88,
                                                        kind: Literal(
                                                            Literal {
                                                                id: ExpressionId {
                                                                    def: ItemId(
                                                                        7990845552190622859,
                                                                    ),
                                                                    index: Idx(
                                                                        1,
                                                                    ),
                                                                },
                                                                location: <internal>:87:88,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: ExpressionId {
                                                                            def: ItemId(
                                                                                7990845552190622859,
                                                                            ),
                                                                            index: Idx(
                                                                                1,
                                                                            ),
                                                                        },
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        location: <internal>:80:89,
                                    },
                                ],
                                location: <internal>:58:107,
                            },
                        ),
                        location: <internal>:40:107,
                    },
                ],
                type_parameters: [],
                location: <internal>:13:121,
            },
        ),
    },
    statements: {
        StatementId {
            def: ItemId(
                7990845552190622859,
            ),
            index: Idx(
                0,
            ),
        }: Statement {
            id: StatementId {
                def: ItemId(
                    7990845552190622859,
                ),
                index: Idx(
                    0,
                ),
            },
            kind: Return(
                Return {
                    id: StatementId {
                        def: ItemId(
                            7990845552190622859,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    value: Some(
                        Expression {
                            id: ExpressionId {
                                def: ItemId(
                                    7990845552190622859,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            location: <internal>:87:88,
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId(
                                            7990845552190622859,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    location: <internal>:87:88,
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    7990845552190622859,
                                                ),
                                                index: Idx(
                                                    1,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:80:89,
        },
    },
    expressions: {
        ExpressionId {
            def: ItemId(
                7990845552190622859,
            ),
            index: Idx(
                1,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    7990845552190622859,
                ),
                index: Idx(
                    1,
                ),
            },
            location: <internal>:87:88,
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            7990845552190622859,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:87:88,
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    7990845552190622859,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
