compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@method_no_ret.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            impl Foo {\n                fn bar() { }\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13138428697284688615,
        ): Impl(
            Implementation {
                id: ItemId(
                    13138428697284688615,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        7990845552190622859,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Identifier {
                            name: "Foo",
                            location: <internal>:18:21,
                        },
                        location: <internal>:18:21,
                    },
                    type_params: [],
                    location: <internal>:18:21,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:43:46,
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: None,
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:49:52,
                            },
                        ),
                        location: <internal>:40:52,
                    },
                ],
                type_parameters: [],
                location: <internal>:13:66,
            },
        ),
    },
    statements: {},
    expressions: {},
}
