compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@operator_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            impl Foo {\n                pub fn ==() -> bool {\n                    return true;\n                }\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13138428697284688615,
        ): Impl(
            Implementation {
                id: ItemId(
                    13138428697284688615,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        7990845552190622859,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Foo",
                                location: <internal>:18:21,
                            },
                        ),
                        location: <internal>:18:21,
                    },
                    type_params: [],
                    location: <internal>:18:21,
                },
                methods: [
                    MethodDefinition {
                        id: ItemId(
                            16917760990986935474,
                        ),
                        method_id: None,
                        visibility: Public,
                        name: Identifier {
                            name: "==",
                            location: <internal>:47:49,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                1065681184011410214,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "bool",
                                        location: <internal>:55:59,
                                    },
                                ),
                                location: <internal>:55:59,
                            },
                            type_params: [],
                            location: <internal>:55:59,
                        },
                        block: Some(
                            Block {
                                statements: [
                                    Statement {
                                        id: StatementId {
                                            def: ItemId(
                                                7990845552190622859,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        kind: Return(
                                            Return {
                                                id: StatementId {
                                                    def: ItemId(
                                                        7990845552190622859,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                value: Some(
                                                    Expression {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                7990845552190622859,
                                                            ),
                                                            index: Idx(
                                                                1,
                                                            ),
                                                        },
                                                        location: <internal>:89:93,
                                                        kind: Literal(
                                                            Literal {
                                                                id: ExpressionId {
                                                                    def: ItemId(
                                                                        7990845552190622859,
                                                                    ),
                                                                    index: Idx(
                                                                        1,
                                                                    ),
                                                                },
                                                                location: <internal>:89:93,
                                                                kind: Boolean(
                                                                    BooleanLiteral {
                                                                        id: ExpressionId {
                                                                            def: ItemId(
                                                                                7990845552190622859,
                                                                            ),
                                                                            index: Idx(
                                                                                1,
                                                                            ),
                                                                        },
                                                                        value: true,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        location: <internal>:82:94,
                                    },
                                ],
                                location: <internal>:60:112,
                            },
                        ),
                        location: <internal>:40:112,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:13:126,
            },
        ),
    },
    statements: {
        StatementId {
            def: ItemId(
                7990845552190622859,
            ),
            index: Idx(
                0,
            ),
        }: Statement {
            id: StatementId {
                def: ItemId(
                    7990845552190622859,
                ),
                index: Idx(
                    0,
                ),
            },
            kind: Return(
                Return {
                    id: StatementId {
                        def: ItemId(
                            7990845552190622859,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    value: Some(
                        Expression {
                            id: ExpressionId {
                                def: ItemId(
                                    7990845552190622859,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            location: <internal>:89:93,
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId(
                                            7990845552190622859,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    location: <internal>:89:93,
                                    kind: Boolean(
                                        BooleanLiteral {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    7990845552190622859,
                                                ),
                                                index: Idx(
                                                    1,
                                                ),
                                            },
                                            value: true,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:82:94,
        },
    },
    expressions: {
        ExpressionId {
            def: ItemId(
                7990845552190622859,
            ),
            index: Idx(
                1,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    7990845552190622859,
                ),
                index: Idx(
                    1,
                ),
            },
            location: <internal>:89:93,
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            7990845552190622859,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:89:93,
                    kind: Boolean(
                        BooleanLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    7990845552190622859,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            value: true,
                        },
                    ),
                },
            ),
        },
    },
}
